# metaprog-homework-21

./: .gitignore  README.md
task01/: CMakeLists.txt  MappingTools.hpp  main.cpp
task1/: CMakeLists.txt  main.cpp  string_mapper.hpp
task2/: CMakeLists.txt  main.cpp  my_main.cpp  type_lists.hpp  type_lists_concepts.hpp  type_lists_impl.hpp  type_tuples.hpp
task2/impl/: convert_to_type_tuple.hpp  drop.hpp  filter.hpp  foldl.hpp  get_from_ttuple.hpp  get_from_typelist.hpp  logic_not.hpp  skip_while.hpp  type_lists_impl.hpp
task2/src/: cons.hpp  cycle.hpp  inits.hpp  map.hpp  take.hpp  zip2_to_lists.hpp
task2/src/impl/: convert_to_type_tuple.hpp  drop.hpp  error_return.hpp  filter.hpp  foldl.hpp  get_from_ttuple.hpp  get_from_typelist.hpp  logic_not.hpp  scanl.hpp  skip_every_nth.hpp  skip_while.hpp  take_while.hpp  type_lists_impl.hpp  zip_to_list.hpp
task2/src/test_imports/: commons_assert.hpp  commons_metafunctions.hpp
task3/: CMakeLists.txt  commons_assert.hpp  function.hpp  main.cpp  managed_ops.hpp  spy.hpp
task4/: CMakeLists.txt  commons_assert.hpp  enum_traits.hpp  main.cpp
task5/: CMakeLists.txt  annotations_checker.hpp  annotations_farming.hpp  main.cpp  reflect.hpp  tuple_method_wrapped.hpp  type_lisis.hpp  ubiq.hpp
task5/impl/: elements_count_impl.hpp  params_defines.h  to_tuple_impl.hpp
task5/scripts/: lenes_seq_generator.py  params_packs_generator.py
